--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
-<h1>My bucket list</h1>
-<H2>Here are a few things I would like to accomplish in 2025</H2>
-<p>Work on my french</p>
-<p>Spend my time more wisely</p>
-<p>Adopt a pug</p>
-<p>Learn how to climb</p>
-<p>Pass this coding course</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>My bucket list</title>
+<link rel="stylesheet" href="styles/index.css">
+</head>
+<body>
+    <h1>My bucket list</h1>
+    <h3>Here are a few things I would like to accomplish in 2025</h3>
+ <ul>
+    <li>Work on my french</li>
+
+    <li>Spend my time more wisely</li>
+
+    <li>Adopt a pug</li>
+
+    <li>Learn how to climb</li>
+
+    <li>Pass this coding course</li>
+
+ </ul>
+    
+    <p>The rest of this year Im going to be focusing on what truly motivates me in life. </p>
+</body>
+
+
+
+
+
+
+
+
+
+
