--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>My bucket list</title>
 <link rel="stylesheet" href="styles/index.css">
+<link rel="stylesheet" href="styles/contact.css">
 </head>
 <body>
     <h1>My bucket list</h1>
@@ -36,7 +37,10 @@
 
 </section>
 
-
+<nav>
+    <a href="pages/contact.html">Contact</a> |
+    
+</nav>
 
 
 
